  category or the first mapped category for the product
- fixed invalid db code in ZMProducts.php
- option to disable language support for ez-pages as zen-cart ignores the
  languages_id (disabled as default)
- Fix double slash '//' in pretty URLs
- add option to .htaccess file to make it work under *nix
- added page_not_found view
- fix missing chapter for pretty links

Release 0.6.1:
- First draft of shipping estimator
- removed popup_ prefix from popup views
- country dropdowns default now to store country
- Fix edit GV send for non image buttons
- Fixed GV Send form handling and page flow
- Added name to result list sorter and filter
- Fixed broken alpha filter
- added a dark colour setup to the demo theme; great to start customising
  colours
- had another go at phpdoc
- zm_href and decendents now support multi value parameter
- added sanity check to result list  to always return a valid page
- added code to auto generate dummy templates in zen-cart
- started cleanup of undocumented functions
- changed the init sequence to allow to load i18n stuff before zen-cart; init
  is now done before the zen-cart template init code
- fixed a stupid date handling bug in the registration form
- added experimental price range filter to demo theme
- moved other.php from default to demo theme

Release 0.6.0:
- Fixed missing file permission check for creating dummy sidebar boxes
- Refactored result list, filter an sort classes
- Added media manager and music related classes
- Refactored result list handling to includes rather than functions
- added getFullName() to ZMAccount
- pretty links support using .htaccess files and URL rewriting (disabled)
- new function zm_media_href(...)
- new ZMDateRule validation rule (untested)
- new demo theme; this will contain sample code/customizations
  NOTE: you will have to create a dummy zen-cart template directory in order
	to use the theme
- new music product page - there you go